--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,7 +113,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/ivFacebook"
+                android:id="@+id/iv_facebook"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:contentDescription="@string/com_facebook_loginview_log_in_button"
