--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    tools:context=".ui.view.LoginActivity">
+    tools:context=".ui.view.login.LoginActivity">
 
     <LinearLayout
         android:id="@+id/ll_root"
