--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.view.MapFragment">
+    tools:context=".ui.view.product_detail.MapFragment">
 
     <fragment
         android:name="com.google.android.gms.maps.SupportMapFragment"
