--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+
     <gradient
         android:angle="135"
-        android:centerColor="#3F51B5"
-        android:endColor="#2196F3"
-        android:startColor="#03A9F4"
+        android:centerColor="#673AB7"
+        android:endColor="#8B6AC6"
+        android:startColor="#7B47D6"
         android:type="linear" />
 </shape>
