--- a/app/src/main/res/layout-v26/activity_product_detail.xml
+++ b/app/src/main/res/layout-v26/activity_product_detail.xml
@@ -16,7 +16,7 @@
 
   <androidx.fragment.app.FragmentContainerView
       android:id="@+id/fragmentContainerView"
-      android:name="com.campingstudio.agencekotlin.ui.view.MapsFragment"
+      android:name="com.campingstudio.agencekotlin.ui.view.product_detail.MapFragment"
       android:layout_width="match_parent"
       android:layout_height="0dp" />
  </LinearLayout>
