--- a/app/src/main/res/layout/app_bar_agence.xml
+++ b/app/src/main/res/layout/app_bar_agence.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:navigationIcon="@drawable/ic_out"
+            app:navigationIcon="@drawable/ic_menu_izq"
             app:popupTheme="@style/Theme.agencekotlin.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
