--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.view.home.ShoppActivity"
-    tools:showIn="@layout/activity_shopp">
+    tools:context=".ui.view.home.HomeFragment"
+    tools:showIn="@layout/fragment_home">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_grid_prods"
