--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -70,7 +70,7 @@
 
     <style name="password_et_style">
         <item name="android:textSize">16sp</item>
-        <item name="android:hint">Contraseña de inicio de sesión</item>
+        <item name="android:hint">Contraseña</item>
         <item name="android:paddingStart">10dp</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="android:textColor">@color/black</item>
